--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -29,6 +29,11 @@
         }
     }
 
+    main, footer {
+        width: 100%;
+        left: 0;
+    }
+
     .header-nav {
         position: absolute;
         z-index: 100;
